# m61-modulus

./: Cargo.toml  LICENSE-MIT  README.md
src/: definition.rs  fallback.rs  lib.rs  parallelized.rs
src/simd/: avx2.rs  avx512.rs  mod.rs  neon.rs  sse2.rs  wasm_simd128.rs  x86_lookup.rs
